# comcept

./: .gitignore  CMakeLists.txt  LICENSE  README.md  comcept.hpp  ranges.hpp  reconcept.hpp  test_comcept.cpp  test_reconcept.cpp
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  linux.yml  windows.yml
comcept/: compare.hpp  concepts.hpp  iterator.hpp
comcept/details/: macros.hpp
include/comcept/: comcept.hpp  compare.hpp  concepts.hpp  iterator.hpp  ranges.hpp
include/comcept/detail/: macros.hpp
include/comcept/details/: macros.hpp
include/comcept/trait/: compare.hpp  concepts.hpp  iterator.hpp  ranges.hpp  type_traits.h  type_traits.hpp
tests/: CMakeLists.txt  all_of.cpp  any_of.cpp  compose.cpp  cvref.cpp  decays_to.cpp  map_of.cpp  not_a.cpp  optional_of.cpp  range_of.cpp  set_of.cpp  tuple_of.cpp  variant_of.cpp
